--- a/Apple.ipynb
+++ b/Apple.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d81eb5e2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     /Users/arthurt/nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "#import libraries \n",
     "import sys\n",
@@ -27,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "740c3d76",
    "metadata": {},
    "outputs": [],
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "3cfd3052",
    "metadata": {},
    "outputs": [],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "cdc4ad4f",
    "metadata": {},
    "outputs": [],
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "444a8133",
    "metadata": {},
    "outputs": [],
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b2099dde",
    "metadata": {},
    "outputs": [],
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "160fed22",
    "metadata": {},
    "outputs": [],
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a762b20b",
    "metadata": {},
    "outputs": [],
@@ -139,20 +149,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e267b413",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Close</th>\n",
+       "      <th>compound</th>\n",
+       "      <th>neg</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>if_news</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-11-27</th>\n",
+       "      <td>91.32</td>\n",
+       "      <td>0.770700</td>\n",
+       "      <td>0.032000</td>\n",
+       "      <td>0.063000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-04</th>\n",
+       "      <td>88.26</td>\n",
+       "      <td>0.141400</td>\n",
+       "      <td>0.043000</td>\n",
+       "      <td>0.057400</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-11</th>\n",
+       "      <td>87.72</td>\n",
+       "      <td>0.100180</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.052400</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-18</th>\n",
+       "      <td>82.20</td>\n",
+       "      <td>-0.007940</td>\n",
+       "      <td>0.060800</td>\n",
+       "      <td>0.061000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-25</th>\n",
+       "      <td>84.84</td>\n",
+       "      <td>0.483825</td>\n",
+       "      <td>0.067500</td>\n",
+       "      <td>0.096000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-01</th>\n",
+       "      <td>85.05</td>\n",
+       "      <td>0.475767</td>\n",
+       "      <td>0.049333</td>\n",
+       "      <td>0.078333</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-08</th>\n",
+       "      <td>94.62</td>\n",
+       "      <td>0.141240</td>\n",
+       "      <td>0.066000</td>\n",
+       "      <td>0.071000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-15</th>\n",
+       "      <td>88.50</td>\n",
+       "      <td>0.468150</td>\n",
+       "      <td>0.057000</td>\n",
+       "      <td>0.105750</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-22</th>\n",
+       "      <td>85.38</td>\n",
+       "      <td>0.597520</td>\n",
+       "      <td>0.026000</td>\n",
+       "      <td>0.078800</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-29</th>\n",
+       "      <td>84.75</td>\n",
+       "      <td>0.337800</td>\n",
+       "      <td>0.061800</td>\n",
+       "      <td>0.083600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Close  compound       neg       pos  if_news\n",
+       "Date                                                    \n",
+       "2006-11-27  91.32  0.770700  0.032000  0.063000        1\n",
+       "2006-12-04  88.26  0.141400  0.043000  0.057400        1\n",
+       "2006-12-11  87.72  0.100180  0.040000  0.052400        1\n",
+       "2006-12-18  82.20 -0.007940  0.060800  0.061000        1\n",
+       "2006-12-25  84.84  0.483825  0.067500  0.096000        1\n",
+       "2007-01-01  85.05  0.475767  0.049333  0.078333        1\n",
+       "2007-01-08  94.62  0.141240  0.066000  0.071000        1\n",
+       "2007-01-15  88.50  0.468150  0.057000  0.105750        1\n",
+       "2007-01-22  85.38  0.597520  0.026000  0.078800        1\n",
+       "2007-01-29  84.75  0.337800  0.061800  0.083600        1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "048c4cbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nPerform k-fold cross-validation on the data\\n\\nParameters\\n----------\\ndf: DataFrame containing the data with date as the index\\nX: DataFrame containing the independent variable(s) (i.e., features, predictors)\\ny: DataFrame containing the dependent variable (i.e., the target)\\nk: Number of folds for cross-validation (default is 5)\\n\\nOptional\\n--------\\nseed: Integer used as the seed for a random number generator\\n      You don't necessarily NEED to use a random number generator, but if you do, please use the default value for seed\\n\\nReturns\\n-------\\nList of tuples: Each tuple contains (X_train, X_test, y_train, y_test) for one fold\\n\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "    \"\"\"\n",
     "    Perform k-fold cross-validation on the data\n",
@@ -177,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "767ee978",
    "metadata": {},
    "outputs": [],
